# example-package

./: .dockerignore  .golangci.yml  BUILD  CODEOWNERS  Dockerfile  Makefile  README.md  WORKSPACE  build.gradle.kts  cloudbuild.yaml  deps.bzl  download-artifacts.sh  e2e.go.push.main.slsa3.yml.txt  go.mod  gradlew  main.go  my-file.txt  renovate.json  setvar.sh  sync-branch1.sh  update_actions.py
e2e/: dummy  e2e.container-based.push.main.default.slsa3.yml.txt  e2e.container-based.push.main.multi.slsa3.yml.txt  e2e.container.push.branch1.default.slsa3.yml.txt  e2e.container.push.main.default.slsa3.yml.txt  e2e.delegator-generic.push.main.default.slsa3.yml.txt  e2e.delegator-generic.tag.main.default.slsa3.yml.txt  e2e.delegator-generic.workflow_dispatch.main.default.slsa3.yml.txt  e2e.delegator-lowperms.push.main.default.slsa3.yml.txt  e2e.delegator-lowperms.tag.main.default.slsa3.yml.txt  e2e.docker-based.push.main.default.slsa3.yml.txt  e2e.gcb.push.main.default.slsa3.yml.txt  e2e.generic-bazel.push.main.default.slsa2.yml.txt  e2e.generic-bazel.push.main.default.slsa3.yml.txt  e2e.generic.push.branch1.default.slsa3.yml.txt  e2e.generic.push.main.default.slsa2.yml.txt  e2e.generic.push.main.default.slsa3.yml.txt  e2e.generic.push.main.upload-tag-name.slsa3.yml.txt  e2e.go.push.branch1.config-ldflags.slsa3.yml.txt  e2e.go.push.main.config-ldflags.slsa3.yml.txt  e2e.go.push.main.config-noldflags.slsa3.yml.txt  e2e.go.push.main.slsa3.yml.txt  e2e.go.tag.main.config-ldflags-assets-draft-tag.slsa3.yml.txt  (+10 more)
e2e/go/: BUILD.bazel  go.mod  go.sum  main.go
nodejs/: .gitignore
(+307 files in other folders)
