load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_lib",
    srcs = ["main.go"],
    importpath = "github.com/slsa-framework/example-package/e2e/go",
    visibility = ["//visibility:private"],
    deps = ["@com_github_pborman_uuid//:uuid"],
)

go_binary(
    name = "go",
    embed = [":go_lib"],
    visibility = ["//visibility:public"],
)
